Fix sidebar top spacing for frameless windows

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -121,7 +121,7 @@ img
   top: 10px !important
 
 .sidebar-top-high-spacing
-  top: 10px !important
+  top: 34px !important
 
 .card
   background-color: transparent !important
